# polybuild

./: CMakeLists.txt  CMakeLists.txt.backup  Makefile  README.md  polybuild-setup.sh  standardization-report.txt  todo
.github/workflows/: ci.yml
cmake/: PolyBuildConfig.cmake.in
docs/: ioc_configuration_architecture.md
docs/architecture/: overview.md
docs/examples/: basic_usage.md
include/cli/: command_strategy.h
include/config/: config_ioc.h
include/polybuild/: dag.h  taxonomy.h  trie.h  trie_dag.h
include/polybuild/core/: crypto.h
nold/: CMakeLists.txt  README.md
nold/docs/: README_legacy.md
nold/include/cli/: command_strategy.h
nold/include/polybuild/core/: crypto.h
nold/schemas/edge/: edge-v1.json
nold/src/cli/: edge_cli.c  micro_cli.c  repl_cli.c
nold/src/core/config/: config_for_micro.c
nold/src/core/crypto/: README.md  crypto.c
nold/src/core/edge/: edge.h
nold/src/core/repl/: repl.h
nold/src/core/telemetry/: telemetry.c
schemas/crypto/: crypto-v1.json
schemas/repl/: repl-v1.json
src/cli/: crypto_cli.c  edge_cli.c  main.c  micro_cli.c  repl_cli.c  telemetry_cli.c
src/cli/command/: command_strategy.c
src/cli/config/: config.c
src/core/config/: config_for_crypto.c  config_for_edge.c  config_for_micro.c  config_for_repl.c  config_for_telemetry.c  config_ioc.c
src/core/crypto/: CMakeLists.txt  README.md  crypto.c  crypto.h
src/core/dag/: dag.c  dag.h
src/core/edge/: edge.c  edge.h
src/core/integration/: intent_dag_integration.h  intent_driven_polybuild.c  trie_dag.c  trie_dag.h  trie_dag.ol
src/core/micro/: micro.c  micro.h
src/core/repl/: repl.c  repl.h
src/core/telemetry/: telemetry.c  telemetry.h
src/core/trie/: taxonomy.h  trie.c
tests/: main.c
